[project]
name = "undetectable-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["playwright>=1.51.0"]

[dependency-groups]
dev = ["mypy>=1.15.0", "pytest>=8.3.5", "ruff>=0.11.6"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 79
lint.ignore = ["COM812", "D", "F821"]
lint.pycodestyle.max-doc-length = 72
lint.pydocstyle.convention = "pep257"
lint.select = ["ALL"]
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
